@@ -119,8 +119,7 @@ sub index {
                 });
                 # call a script hook after successful login?
                 if($c->config->{'cookie_auth_login_hook'}) {
-                    my $cookie_hook = 'REMOTE_USER="'.$login.'" '.$c->config->{'cookie_auth_login_hook'}.' >/dev/null 2>&1 &';
-                    `$cookie_hook`;
+                    Thruk::Utils::IO::cmd($c, $c->config->{'cookie_auth_login_hook'}.' &');
                 }
                 return $c->redirect_to($referer);
             } else {
