@@ -6,6 +6,7 @@ next:
           - support opening server actions in new tabs
           - support service lists for recurring downtimes
           - fix livestatus "Operator !~~ for lists not implemented." issue when having an empty search filter
+          - set contactgroups as REMOTE_USER_GROUPS into the environment for hooks and scripts
           - Business Process:
             - add support for simple wildcards, ex.: host:*
             - add link to all input hosts/services
